--- a/src/main/resources/templates/res/add.html
+++ b/src/main/resources/templates/res/add.html
@@ -25,44 +25,7 @@
 
 </div>
 <div id="content" class="layui-fluid">
-    <!--<div th:include="role/inc :: head"  class="layui-row"></div>-->
-    <form class="layui-form" role="form" th:method="post" th:object="${res}" id="addForm">
-        <!--<table width="800" cellspacing="0" cellPadding="0">-->
-            <!--&lt;!&ndash;<thead>&ndash;&gt;-->
-            <!--&lt;!&ndash;<tr>&ndash;&gt;-->
-                <!--&lt;!&ndash;<td colspan="2">添加资源功能</td>&ndash;&gt;-->
-            <!--&lt;!&ndash;</tr>&ndash;&gt;-->
-            <!--&lt;!&ndash;</thead>&ndash;&gt;-->
-
-            <!--<tr class="layui-form-item">-->
-                <!--<label for="L_email" class="layui-form-label">-->
-                    <!--<span class="x-red">*</span>res名称:</label>-->
-                <!--<div class="layui-input-inline">-->
-                    <!--<input type="text" id="L_email" name="class_collage" required="" lay-verify="nickname"-->
-
-                           <!--autocomplete="off" class="layui-input"></div>-->
-            <!--</tr>-->
-            <!--&lt;!&ndash;<tr>&ndash;&gt;-->
-                <!--&lt;!&ndash;<td class="rightTd" width="200px">res名称:</td>&ndash;&gt;-->
-                <!--&lt;!&ndash;<td class="leftTd"><input type="text" th:field="${res.name}" size="30"/></td>&ndash;&gt;-->
-            <!--&lt;!&ndash;</tr>&ndash;&gt;-->
-            <!--<tr>-->
-                <!--<td class="rightTd">res地址:</td>-->
-                <!--<td class="leftTd">-->
-                    <!--<input th:field="${res.url}" size="30"/>-->
-                <!--</td>-->
-            <!--</tr>-->
-            <!--<tr>-->
-                <!--<td class="rightTd">res权限字符串:</td>-->
-                <!--<td class="leftTd">-->
-                    <!--<input th:field="${res.permission}" size="30"/>-->
-                <!--</td>-->
-            <!--</tr>-->
-            <!--<tr>-->
-                <!--<td colspan="2" class="centerTd"><input type="submit" value="添加资源"/><input type="reset"/></td>-->
-            <!--</tr>-->
-        <!--</table>-->
-
+    <form class="layui-form" role="form" method="post" th:object="${res}" id="addForm">
         <div class="layui-form-item">
             <label for="L_email" class="layui-form-label">
                 <span class="x-red">*</span>res名称:</label>
@@ -76,7 +39,7 @@
                 <span class="x-red">*</span>res地址:</label>
             <div class="layui-input-inline">
                 <input type="text" id="L_username" name="class_major"
-                       th:field="${res.permission}"
+                       th:field="${res.url}"
                        required="" lay-verify="nikename" autocomplete="off" class="layui-input"></div>
         </div>
         <div class="layui-form-item">
@@ -90,7 +53,7 @@
 
         <div class="layui-btn-container" style="margin-left: 130px">
             <input type="submit" class="layui-btn" value="添加资源"/>
-            <input type="reset" class="layui-btn"/>
+            <a class="layui-btn layui-btn-primary" th:href="@{|/admin/res/list|}">返回</a>
         </div>
     </form>
 </div>
