--- a/src/main/resources/templates/role/add.html
+++ b/src/main/resources/templates/role/add.html
@@ -2,7 +2,6 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <!--<script type="text/javascript" src="../js/jquery-1.11.3.min.js"></script>-->
     <title>角色添加</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -20,7 +19,6 @@
 <div class="x-nav" style="margin-bottom: 30px">
           <span class="layui-breadcrumb">
             <a th:href="@{|/admin/role/list|}">角色列表</a>
-            <!--<a href="">XX</a>-->
             <a>
               <cite>角色添加</cite></a>
           </span>
@@ -44,7 +42,7 @@
 
             <div class="layui-btn-container" style="margin-left: 130px">
                 <input type="submit" class="layui-btn" value="添加">
-                <input type="reset" class="layui-btn" value="重置">
+                <a class="layui-btn layui-btn-primary" th:href="@{|/admin/role/list|}">返回</a>
             </div>
         </form>
     </div>
