--- a/src/main/resources/templates/role/update.html
+++ b/src/main/resources/templates/role/update.html
@@ -30,10 +30,10 @@
     <div class="layui-row">
         <form class="layui-form" role="form" th:method="post" th:object="${role}">
             <div class="layui-form-item">
-                <label class="layui-form-label">
-                    <span class="x-red">*</span>更新角色功能</label>
-                <div class="layui-input-inline">
-                    <input type="text" required="" lay-verify="nickname" autocomplete="off" class="layui-input"></div>
+                <label class="layui-form-label" style="width: 100px">
+                    <span class="x-red"></span>更新角色功能</label>
+                <!--<div class="layui-input-inline">-->
+                    <!--<input type="text" required="" lay-verify="nickname" autocomplete="off" class="layui-input"></div>-->
             </div>
             <div class="layui-form-item">
                 <label for="L_email" class="layui-form-label">
@@ -54,7 +54,7 @@
 
             <div class="layui-btn-container" style="margin-left: 130px">
                 <input type="submit" class="layui-btn" value="更新角色">
-                <input type="reset" class="layui-btn" value="重置">
+                <a class="layui-btn layui-btn-primary" th:href="@{|/admin/role/list|}">返回</a>
             </div>
         </form>
     </div>
