--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -22,57 +22,6 @@
     </style>
 </head>
 <body>
-<!--<div id="content">-->
-    <!--<div th:include="user/inc :: head"></div>-->
-    <!--<form role="form" th:method="post" th:object="${user}" id="addForm">-->
-        <!--<table width="800" cellspacing="0" cellPadding="0">-->
-            <!--<thead>-->
-            <!--<tr>-->
-                <!--<td colspan="2">添加用户功能</td>-->
-            <!--</tr>-->
-            <!--</thead>-->
-            <!--<tr>-->
-                <!--<td class="rightTd" width="200px">用户名(必须是英文):</td>-->
-                <!--<td class="leftTd"><input type="text" th:field="${user.username}" size="30"/></td>-->
-            <!--</tr>-->
-            <!--<tr>-->
-                <!--<td class="rightTd">显示名称(可以是中文):</td>-->
-                <!--<td class="leftTd">-->
-                    <!--<input th:field="${user.nickname}" size="30"/>-->
-                <!--</td>-->
-            <!--</tr>-->
-            <!--<tr>-->
-                <!--<td class="rightTd">用户密码:</td>-->
-                <!--<td>-->
-                    <!--<input type="password" th:field="${user.password}" size="30"/>-->
-                <!--</td>-->
-            <!--</tr>-->
-            <!--<tr>-->
-                <!--<td class="rightTd">状态:</td>-->
-                <!--<td>-->
-                    <!--<select path="status" th:field="${user.status}">-->
-                        <!--<option value=""> &#45;&#45; 请选择 &#45;&#45;</option>-->
-                        <!--<option th:value="0" th:text="启用"></option>-->
-                        <!--<option th:value="1" th:text="停用"></option>-->
-                    <!--</select>-->
-                <!--</td>-->
-            <!--</tr>-->
-            <!--<tr>-->
-                <!--<td class="rightTd">角色:</td>-->
-                <!--<td>-->
-                    <!--<span th:each="role:${roles}" >-->
-                        <!--<input type="checkbox" class="rids" name="rids" th:text="${role.name } "-->
-                               <!--th:value="${role.id }"/>-->
-                        <!--</span>-->
-                <!--</td>-->
-            <!--</tr>-->
-            <!--<tr>-->
-                <!--<td colspan="2" class="centerTd"><input type="submit" value="添加用户"/><input type="reset"/></td>-->
-            <!--</tr>-->
-        <!--</table>-->
-    <!--</form>-->
-<!--</div>-->
-
 <div class="x-nav" style="margin-bottom: 30px">
           <span class="layui-breadcrumb" style="visibility: visible">
             <a th:href="@{|/admin/user/list|}">用户列表</a>
@@ -128,7 +77,7 @@
 
             <div class="layui-btn-container" style="margin-left: 130px">
                 <input type="submit" class="layui-btn" value="添加用户">
-                <input type="reset" class="layui-btn" value="重置">
+                <a class="layui-btn layui-btn-primary" th:href="@{|/admin/user/list|}">返回</a>
             </div>
         </form>
     </div>
