--- a/src/main/resources/templates/user/update.html
+++ b/src/main/resources/templates/user/update.html
@@ -2,14 +2,9 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <!--<script type="text/javascript" src="../js/jquery-1.11.3.min.js"></script>-->
-
     <link rel="stylesheet" href="../../static/css/font.css">
     <link rel="stylesheet" href="../../static/css/xadmin.css">
     <link rel="stylesheet" href="../../static/css/layui.css">
-
-    <!--<script type="text/javascript" th:src="@{/js/jquery-2.1.1.min.js}"></script>-->
-    <!--<script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>-->
     <script type="text/javascript" th:src="@{/js/jquery-2.1.1.min.js}"></script>
     <script type="text/javascript" src="../../static/js/layui.js" charset="utf-8"></script>
     <script type="text/javascript" src="../../static/js/xadmin.js"></script>
@@ -28,67 +23,8 @@
         });
     </script>
     <title>更新用户</title>
-    <!--<style>-->
-        <!--.layui-form input[type=checkbox], .layui-form input[type=radio], .layui-form select{-->
-            <!--display: inherit;-->
-        <!--}-->
-    <!--</style>-->
 </head>
 <body>
-<!--<div id="content">-->
-    <!--<div th:include="user/inc :: head"></div>-->
-    <!--<form role="form" th:method="post" th:object="${user}" id="updateForm">-->
-        <!--<table width="800" cellspacing="0" cellPadding="0">-->
-            <!--<thead>-->
-            <!--<tr>-->
-                <!--<td colspan="2">更新用户功能</td>-->
-            <!--</tr>-->
-            <!--</thead>-->
-            <!--<tr>-->
-                <!--<td class="rightTd" width="200px">用户名(必须是英文):</td>-->
-                <!--<td class="leftTd"><input type="text" th:field="${user.username}" size="30"/></td>-->
-            <!--</tr>-->
-            <!--<tr>-->
-                <!--<td class="rightTd">显示名称(可以是中文):</td>-->
-                <!--<td class="leftTd">-->
-                    <!--<input th:field="${user.nickname}" size="30"/>-->
-                <!--</td>-->
-            <!--</tr>-->
-            <!--<tr>-->
-                <!--<td class="rightTd">用户密码:</td>-->
-                <!--<td>-->
-                    <!--<input type="password" th:field="${user.password}" size="30"/>-->
-                <!--</td>-->
-            <!--</tr>-->
-            <!--<tr>-->
-                <!--<td class="rightTd">状态:</td>-->
-                <!--<td>-->
-                    <!--<select path="status" th:field="${user.status}"  >-->
-                        <!--<option value=""> &#45;&#45; 请选择 &#45;&#45;</option>-->
-                        <!--<option th:selected="${user.status==false}" value="0" >启用</option>-->
-                        <!--<option th:selected="${user.status== true}" value="1" >停用</option>-->
-                    <!--</select>-->
-                <!--</td>-->
-            <!--</tr>-->
-            <!--<tr>-->
-                <!--<td class="rightTd">角色:</td>-->
-                <!--<td>-->
-                    <!--<span th:each="hr:${hasRole}">-->
-                        <!--<input type="hidden" class="hasRole" name="hasRole" th:value="${hr}"/></span>-->
-                    <!--<span th:each="role:${roles}">-->
-                        <!--<input type="checkbox" class="rids" name="rids" th:text="${role.name } "-->
-                               <!--th:value="${role.id }"/>-->
-                        <!--</span>-->
-                <!--</td>-->
-            <!--</tr>-->
-            <!--<tr>-->
-                <!--<td colspan="2" class="centerTd"><input type="submit" value="更新用户"/><input type="reset"/></td>-->
-            <!--</tr>-->
-        <!--</table>-->
-    <!--</form>-->
-<!--</div>-->
-
-
 <div class="x-nav" style="margin-bottom: 30px">
           <span class="layui-breadcrumb" style="visibility: visible">
             <a th:href="@{|/admin/user/list|}">用户列表</a>
@@ -114,12 +50,6 @@
                 <div class="layui-input-inline">
                     <input type="text" required="" lay-verify="nickname" th:field="${user.nickname}" autocomplete="off" class="layui-input"></div>
             </div>
-            <!--<div class="layui-form-item">-->
-                <!--<label  class="layui-form-label">-->
-                    <!--<span class="x-red">*</span>原用户密码:</label>-->
-                <!--<div class="layui-input-inline">-->
-                    <!--<input type="password" required="" lay-verify="nickname" th:field="${user.password}" autocomplete="off" class="layui-input"></div>-->
-            <!--</div>-->
 
             <div class="layui-form-item">
                 <label  class="layui-form-label">
@@ -155,7 +85,7 @@
 
             <div class="layui-btn-container" style="margin-left: 130px">
                 <input type="submit" class="layui-btn" value="添加用户">
-                <input type="reset" class="layui-btn" value="重置">
+                <a class="layui-btn layui-btn-primary" th:href="@{|/admin/user/list|}">返回</a>
             </div>
         </form>
     </div>
