--- a/src/main/resources/templates/kaohe/moveIn.html
+++ b/src/main/resources/templates/kaohe/moveIn.html
@@ -181,6 +181,32 @@
 					</div>
 				</div>
 
+
+<!--				<div class="layui-form">-->
+<!--					<div class="layui-form-item">-->
+<!--						<div class="layui-inline">-->
+<!--							<div class="layui-inline">-->
+<!--								<label class="layui-form-label">开始时间</label>-->
+<!--								<div class="layui-input-inline">-->
+<!--									<input name="arrangeStart" type="text" class="layui-input" id="test5" placeholder="yyyy-MM-dd HH:mm:ss">-->
+<!--								</div>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--						<div class="layui-inline">-->
+<!--							<div class="layui-inline">-->
+<!--								<label class="layui-form-label">结束时间</label>-->
+<!--								<div class="layui-input-inline">-->
+<!--									<input name="arrangeEnd" type="text" class="layui-input" id="test2" placeholder="yyyy-MM-dd HH:mm:ss">-->
+<!--								</div>-->
+
+<!--							</div>-->
+
+<!--						</div>-->
+<!--					</div>-->
+<!--				</div>-->
+
+
+
 				<div class="layui-form-item ">
 					<div class="layui-input-block ">
 						<button type="submit" class="layui-btn bo" lay-submit="" lay-filter="demo1" >添加</button>
