--- a/src/main/resources/templates/shiyan/lookTestAndReport.html
+++ b/src/main/resources/templates/shiyan/lookTestAndReport.html
@@ -75,8 +75,9 @@
                                         <select name="interest" lay-filter="aihao" onchange="window.open(this.options[this.selectedIndex].value,target='_self')"
                                                 style="margin-top: 15px;height: 30px;width: 150px;border-color: lightgray;" >
                                             <option>请选择</option>
-                                            <div th:each="course:${course}" class="">
-                                                <option th:value="|/expmodel/moduleList/${course.id}|"  th:text="${course.courseName}">java</option>
+                                            <div th:each="course:${courseInfoList}" class="">
+                                                <option th:value="|/expmodel/moduleList/${course.id}|"  th:text="${course.courseName}" th:if="${course.getId() ne selected}">java</option>
+                                                <option th:value="|/expmodel/moduleList/${course.id}|"  th:text="${course.courseName}" selected="selected" th:if="${course.getId()  eq selected}">java</option>
                                                 <!--<p th:text="${course.courseName}"></p>-->
                                             </div>
                                         </select>
@@ -86,7 +87,7 @@
                             </th>
                         </div>
                        
-                        <div class="layui-card-body ">
+                        <div class="layui-card-body " th:if="${Choose} ">
                             <table class="layui-table layui-form">
                                 <thead>
                                   <tr>
@@ -117,14 +118,14 @@
                                 </tbody>
                               </table>
                         </div>
-                        <div class="layui-card-body ">
-                            <div class="page">
-                                <div>
-                                  <a class="prev" th:href="@{/expmodel/moduleList(pageNum=${page1.hasPrevious()}?${page1.number}-1:0)}">&lt;&lt;</a>
-                                  <a class="next" th:href="@{/expmodel/moduleList(pageNum=${page1.hasNext()}?${page1.number}+1:${page1.number})}">&gt;&gt;</a>
-                                </div>
-                            </div>
-                        </div>
+<!--                        <div class="layui-card-body ">-->
+<!--                            <div class="page">-->
+<!--                                <div>-->
+<!--                                  <a class="prev" th:href="@{/expmodel/moduleList(pageNum=${page1.hasPrevious()}?${page1.number}-1:0)}">&lt;&lt;</a>-->
+<!--                                  <a class="next" th:href="@{/expmodel/moduleList(pageNum=${page1.hasNext()}?${page1.number}+1:${page1.number})}">&gt;&gt;</a>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
                     </div>
                 </div>
             </div>
