--- a/src/main/resources/templates/shiyan/newExpModel.html
+++ b/src/main/resources/templates/shiyan/newExpModel.html
@@ -1,170 +1,185 @@
 <!DOCTYPE html>
-<html  xmlns:th="http://www.thymeleaf.org">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="renderer" content="webkit">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<title>新建---实验模块</title>
-		<script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>
-		<link rel="stylesheet" type="text/css" href="../../static/css/layui.css"/>
-		<link rel="stylesheet" href="../../static/css/font.css">
-		<link rel="stylesheet" href="../../static/css/xadmin.css">
-		
-	</head>
-		<style type="text/css">
-			#content{
-				padding: 2%;
-			}
-			.layui-input-block{
-				margin-left: 150px;
-			}
-			.layui-form-label{
-				width:inherit;
-				font-weight: 900;
-			}
-			.layui-upload{
-				margin-left: 150px;
-			}
-			.layui-upload-list{
-				width: 200px;
-				height: 200px;
-				border: #B2B2B2 solid 1px;
-			}
-			.layui-form input[type=checkbox], .layui-form input[type=radio], .layui-form select {
-				display: block;
-				width: 100%;
-				height: 38px;
-				background-color: #fff;
-				/*border:1px solid #e6e6e6 ;*/
-				position: absolute;
-			}
-			.layui-upload-list img{
-				with:100%;
-				max-height: 100%;
-			}
-			.layui-upload-list img{
-				width: 100%;
-				max-height: 100%;
-			}
-            .layui-form input[type=checkbox], .layui-form input[type=radio], .layui-form select{
-                display: none;
-            }
-		</style>
-	<body>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8">
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>新建---实验模块</title>
+    <script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>
+    <link rel="stylesheet" type="text/css" href="../../static/css/layui.css"/>
+    <link rel="stylesheet" href="../../static/css/font.css">
+    <link rel="stylesheet" href="../../static/css/xadmin.css">
 
-	<!--<div style="text-align: center;margin-top:30px;font-size: 20px;">新建-&#45;&#45;实验模块</div>-->
-		<div class="layui-container" id="content">
-			<div class="layui-row">
-				<form class="layui-form layui-col-md7" th:action="@{/expmodel/addExpModel}"  method="post" enctype="multipart/form-data">
-				<div class="layui-form-item">
-				    <label class="layui-form-label">实验名称：</label>
-				    <div class="layui-input-block">
-				      <input type="text" name="m_name" lay-verify="title" required="required" autocomplete="off" placeholder="请输入实验名称" class="layui-input">
-				    </div>
-				</div>
-				<div class="layui-form-item">
-				    <label class="layui-form-label">实验简介图片:</label>
-				    <div class="layui-upload">
-						<input type="file"  id="test1" name="m_image" required="required" value="上传图片" onchange="xmTanUploadImg(this)"/>
-						  <div class="layui-upload-list">
-						    <img class="layui-upload-img" id="selectImg">
-						    <p id="demoText"></p>
-						  </div>
-					</div>  
-				</div>
-				<div class="layui-form-item">
-				    <label class="layui-form-label">实验负责人:</label>
-				    <div class="layui-input-block">
-				      <input type="text" name="m_manager"  required="required" lay-verify="title" autocomplete="off" placeholder="请输入实验负责人" class="layui-input">
-				    </div>
-				</div>
-				<div class="layui-form-item">
-				    <label class="layui-form-label">实验类型：</label>
-				    <div class="layui-input-block">
-				      <select name="m_type" lay-filter="aihao" required="required">
-				        <option value="理论验证">理论验证</option>
-				        <option value="综合实操" selected="">综合实操</option>
-				        <option value="拓展创新">拓展创新</option>
-				      </select>
-				    </div>
-				 </div>
-				<div class="layui-form-item">
-				    <label class="layui-form-label">课时：</label>
-				    <div class="layui-input-block">
-				      <input type="text" name="m_classhour" required="required" lay-verify="title" autocomplete="off" placeholder="请输入课时" class="layui-input">
-				    </div>
-				</div>
-				<div class="layui-form-item">
-				    <label class="layui-form-label">实验平台链接：</label>
-				    <div class="layui-input-block">
-				      <input type="text" name="m_inurl" required="required" lay-verify="title" autocomplete="off" placeholder="请输入实验平台链接" class="layui-input">
-				    </div>
-				</div>
-                <div class="layui-form-item">
-                    <label class="layui-form-label">实验报告类型：</label>
-                    <div class="layui-input-block">
-                        <input type="radio"  name="report_type" value="1" title="学院版"/>
-                        <input type="radio" name="report_type" value="0" title="自定义版"/>
+</head>
+<style type="text/css">
+    #content {
+        padding: 2%;
+    }
+
+    .layui-input-block {
+        margin-left: 150px;
+    }
+
+    .layui-form-label {
+        width: inherit;
+        font-weight: 900;
+    }
+
+    .layui-upload {
+        margin-left: 150px;
+    }
+
+    .layui-upload-list {
+        width: 200px;
+        height: 200px;
+        border: #B2B2B2 solid 1px;
+    }
+
+    .layui-form input[type=checkbox], .layui-form input[type=radio], .layui-form select {
+        display: block;
+        width: 100%;
+        height: 38px;
+        background-color: #fff;
+        /*border:1px solid #e6e6e6 ;*/
+        position: absolute;
+    }
+
+    .layui-upload-list img {
+        with: 100%;
+        max-height: 100%;
+    }
+
+    .layui-upload-list img {
+        width: 100%;
+        max-height: 100%;
+    }
+
+    .layui-form input[type=checkbox], .layui-form input[type=radio], .layui-form select {
+        display: none;
+    }
+</style>
+<body>
+
+<!--<div style="text-align: center;margin-top:30px;font-size: 20px;">新建-&#45;&#45;实验模块</div>-->
+<div class="layui-container" id="content">
+    <div class="layui-row">
+        <form class="layui-form layui-col-md7" th:action="@{/expmodel/addExpModel}" method="post"
+              enctype="multipart/form-data">
+            <div class="layui-form-item">
+                <label class="layui-form-label">实验名称：</label>
+                <div class="layui-input-block">
+                    <input type="text" name="m_name" lay-verify="title" required="required" autocomplete="off"
+                           placeholder="请输入实验名称" class="layui-input">
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">实验简介图片:</label>
+                <div class="layui-upload">
+                    <input type="file" id="test1" name="m_image" required="required" value="上传图片"
+                           onchange="xmTanUploadImg(this)"/>
+                    <div class="layui-upload-list">
+                        <img class="layui-upload-img" id="selectImg">
+                        <p id="demoText"></p>
                     </div>
                 </div>
-				 
-				<div class="layui-form-item">
-				    <div class="layui-input-block">
-				      <input type="submit" class="layui-btn layui-bg-green" href="../expmodel/addTheory" value="添加理论学习"/>
-				      <a  class="layui-btn layui-btn-primary" href="../expmodel/list" th:href="@{/expmodel/list}">取消</a>
-				    </div>
-				</div>
-			</form>
-			</div>
-		</div>
-	</body>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">实验负责人:</label>
+                <div class="layui-input-block">
+                    <input type="text" name="m_manager" required="required" lay-verify="title" autocomplete="off"
+                           placeholder="请输入实验负责人" class="layui-input">
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">实验类型：</label>
+                <div class="layui-input-block">
+                    <select name="m_type" lay-filter="aihao" required="required">
+                        <option value="理论验证">理论验证</option>
+                        <option value="综合实操" selected="">综合实操</option>
+                        <option value="拓展创新">拓展创新</option>
+                    </select>
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">课时：</label>
+                <div class="layui-input-block">
+                    <input type="text" name="m_classhour" required="required" lay-verify="title" autocomplete="off"
+                           placeholder="请输入课时" class="layui-input">
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">实验平台链接：</label>
+                <div class="layui-input-block">
+                    <input type="text" name="m_inurl" required="required" lay-verify="title" autocomplete="off"
+                           placeholder="请输入实验平台链接" class="layui-input">
+                </div>
+            </div>
+            <div class="layui-form-item" style="visibility: hidden">
+                <label class="layui-form-label">实验报告类型：</label>
+                <div class="layui-input-block">
+                    <input type="radio" name="report_type" value="1" title="学院版"/>
+                    <input type="radio" name="report_type" value="0" title="自定义版"/>
+                </div>
+            </div>
 
-    <script src="../../static/js/layui.all.js"></script>
-	<script type="text/javascript">
-		layui.use(['element','form'],function () {
-			var form = layui.form;
-		})
-		function xmTanUploadImg(obj) {
-			var file = obj.files[0];
-			var reader = new FileReader();
-			reader.readAsDataURL(file);
-			reader.onload = function(e) { //成功读取文件
-				var img = document.getElementById("selectImg");
-				img.src = e.target.result;
-			};
-		}
+            <div class="layui-form-item">
+                <div class="layui-input-block">
+                    <input type="submit" class="layui-btn layui-bg-green" href="../expmodel/addTheory" value="添加理论学习"/>
+                    <a class="layui-btn layui-btn-primary" href="../expmodel/list" th:href="@{/expmodel/list}">取消</a>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+</body>
 
-		// layui.use('upload', function(){
-		//   var $ = layui.jquery
-		//   ,upload = layui.upload;
-		//
-		//   //普通图片上传
-		//   var uploadInst = upload.render({
-		//     elem: '#test1'
-		//     ,url: 'https://httpbin.org/post' //改成您自己的上传接口
-		//     ,before: function(obj){
-		//       //预读本地文件示例，不支持ie8
-		//       obj.preview(function(index, file, result){
-		//         $('#demo1').attr('src', result); //图片链接（base64）
-		//       });
-		//     }
-		//     ,done: function(res){
-		//       //如果上传失败
-		//       if(res.code > 0){
-		//         return layer.msg('上传失败');
-		//       }
-		//       //上传成功
-		//     }
-		//     ,error: function(){
-		//       //演示失败状态，并实现重传
-		//       var demoText = $('#demoText');
-		//       demoText.html('<span style="color: #FF5722;">上传失败</span> <a class="layui-btn layui-btn-xs demo-reload">重试</a>');
-		//       demoText.find('.demo-reload').on('click', function(){
-		//         uploadInst.upload();
-		//       });
-		//     }
-		//   });
-		// });
-	</script>
+<script src="../../static/js/layui.all.js"></script>
+<script type="text/javascript">
+    layui.use(['element', 'form'], function () {
+        var form = layui.form;
+    })
+
+    function xmTanUploadImg(obj) {
+        var file = obj.files[0];
+        var reader = new FileReader();
+        reader.readAsDataURL(file);
+        reader.onload = function (e) { //成功读取文件
+            var img = document.getElementById("selectImg");
+            img.src = e.target.result;
+        };
+    }
+
+    // layui.use('upload', function(){
+    //   var $ = layui.jquery
+    //   ,upload = layui.upload;
+    //
+    //   //普通图片上传
+    //   var uploadInst = upload.render({
+    //     elem: '#test1'
+    //     ,url: 'https://httpbin.org/post' //改成您自己的上传接口
+    //     ,before: function(obj){
+    //       //预读本地文件示例，不支持ie8
+    //       obj.preview(function(index, file, result){
+    //         $('#demo1').attr('src', result); //图片链接（base64）
+    //       });
+    //     }
+    //     ,done: function(res){
+    //       //如果上传失败
+    //       if(res.code > 0){
+    //         return layer.msg('上传失败');
+    //       }
+    //       //上传成功
+    //     }
+    //     ,error: function(){
+    //       //演示失败状态，并实现重传
+    //       var demoText = $('#demoText');
+    //       demoText.html('<span style="color: #FF5722;">上传失败</span> <a class="layui-btn layui-btn-xs demo-reload">重试</a>');
+    //       demoText.find('.demo-reload').on('click', function(){
+    //         uploadInst.upload();
+    //       });
+    //     }
+    //   });
+    // });
+</script>
 </html>
