--- a/src/main/resources/templates/student/class_add.html
+++ b/src/main/resources/templates/student/class_add.html
@@ -50,7 +50,7 @@
                         <div class="layui-input-inline">
                             <input type="text"  name="class_teacher"  required="" lay-verify="nikename" autocomplete="off" class="layui-input"></div>
                     </div>
-                    <div class="layui-form-item">
+                    <div class="layui-form-item" style="visibility: hidden">
                         <label class="layui-form-label">是否往期</label>
                         <div class="layui-input-block">
                             <input type="radio" name="class_iscurrent" value='0' title="否">
