--- a/src/main/resources/templates/student/class_alter.html
+++ b/src/main/resources/templates/student/class_alter.html
@@ -53,7 +53,7 @@
                         <div class="layui-input-inline">
                             <input type="text"  name="class_teacher" th:value="${class.classTeacher}" required="" lay-verify="nikename" autocomplete="off" class="layui-input"></div>
                     </div>
-                    <div class="layui-form-item">
+                    <div class="layui-form-item" style="visibility: hidden">
                         <label class="layui-form-label">是否往期</label>
                         <div class="layui-input-block">
                             <input type="radio" name="classIscurrent" value='0'th:field="${class.classIscurrent}"   title="否">
