考核模块管理分页,模块测试分页,模块报告分页,修复被覆盖上传的模块测试代码

--- a/src/main/resources/templates/kaohe/score2_manage.html
+++ b/src/main/resources/templates/kaohe/score2_manage.html
@@ -261,7 +261,7 @@
 <!--        </ul>-->
 <!--    </div>-->
 
-    <div class="modal-footer no-margin-top " th:if="${ Choose}">
+    <div class="modal-footer no-margin-top " th:if="${needPaging}">
         <ul class="pagination pull-right no-margin">
 
             <!-- 首页 -->
