--- a/src/main/resources/templates/kaohe/checkModule.html
+++ b/src/main/resources/templates/kaohe/checkModule.html
@@ -117,42 +117,74 @@
     </div>
 
 
-    <div class="modal-footer no-margin-top">
-        <ul class="pagination pull-right no-margin">
+<!--    <div class="modal-footer no-margin-top">-->
+<!--        <ul class="pagination pull-right no-margin">-->
 
-            <!-- 首页 -->
-            <li>
-                <a th:href="'/kaohemodel/checkModule?pageNum=0'">首页</a>
-            </li>
+<!--            &lt;!&ndash; 首页 &ndash;&gt;-->
+<!--            <li>-->
+<!--                <a th:href="'/kaohemodel/checkModule?pageNum=0'">首页</a>-->
+<!--            </li>-->
 
-            <!-- 上一页 -->
-            <li th:if="${kaoheModelPageInfo.hasPrevious()}">
-                <a th:href="'/kaohemodel/checkModule?pageNum=' + ${kaoheModelPageInfo.previousPageable().getPageNumber()}"
-                   th:text="上一页"></a>
-            </li>
+<!--            &lt;!&ndash; 上一页 &ndash;&gt;-->
+<!--            <li th:if="${kaoheModelPageInfo.hasPrevious()}">-->
+<!--                <a th:href="'/kaohemodel/checkModule?pageNum=' + ${kaoheModelPageInfo.previousPageable().getPageNumber()}"-->
+<!--                   th:text="上一页"></a>-->
+<!--            </li>-->
 
-            <!-- 中间页 -->
-            <li th:each="pageNum:${#numbers.sequence(0, kaoheModelPageInfo.getTotalPages() - 1)}">
-                <a th:href="'/kaohemodel/checkModule?pageNum=' + ${pageNum}" th:text="${pageNum + 1}"
-                   th:if="${pageNum ne kaoheModelPageInfo.pageable.getPageNumber()}"></a>
-                <a th:href="'/kaohemodel/checkModule?pageNum=' + ${pageNum}" th:text="${pageNum + 1}"
-                   th:if="${pageNum eq kaoheModelPageInfo.pageable.getPageNumber()}"
-                   th:style="'font-weight:bold;background: #6faed9;'"></a>
-            </li>
+<!--            &lt;!&ndash; 中间页 &ndash;&gt;-->
+<!--            <li th:each="pageNum:${#numbers.sequence(0, kaoheModelPageInfo.getTotalPages() - 1)}">-->
+<!--                <a th:href="'/kaohemodel/checkModule?pageNum=' + ${pageNum}" th:text="${pageNum + 1}"-->
+<!--                   th:if="${pageNum ne kaoheModelPageInfo.pageable.getPageNumber()}"></a>-->
+<!--                <a th:href="'/kaohemodel/checkModule?pageNum=' + ${pageNum}" th:text="${pageNum + 1}"-->
+<!--                   th:if="${pageNum eq kaoheModelPageInfo.pageable.getPageNumber()}"-->
+<!--                   th:style="'font-weight:bold;background: #6faed9;'"></a>-->
+<!--            </li>-->
 
-            <!-- 下一页 -->
-            <li th:if="${kaoheModelPageInfo.hasNext()}">
-                <a th:href="'/kaohemodel/checkModule?pageNum=' + ${kaoheModelPageInfo.nextPageable().getPageNumber()}"
-                   th:text="下一页"></a>
-            </li>
+<!--            &lt;!&ndash; 下一页 &ndash;&gt;-->
+<!--            <li th:if="${kaoheModelPageInfo.hasNext()}">-->
+<!--                <a th:href="'/kaohemodel/checkModule?pageNum=' + ${kaoheModelPageInfo.nextPageable().getPageNumber()}"-->
+<!--                   th:text="下一页"></a>-->
+<!--            </li>-->
 
-            <!-- 尾页 -->
-            <li>
-                <a th:href="'/kaohemodel/checkModule?pageNum=' + ${kaoheModelPageInfo.getTotalPages() - 1}">尾页</a>
-            </li>
+<!--            &lt;!&ndash; 尾页 &ndash;&gt;-->
+<!--            <li>-->
+<!--                <a th:href="'/kaohemodel/checkModule?pageNum=' + ${kaoheModelPageInfo.getTotalPages() - 1}">尾页</a>-->
+<!--            </li>-->
 
-        </ul>
-    </div>
+<!--        </ul>-->
+<!--    </div>-->
+
+        <div class="modal-footer no-margin-top " th:if="${needPaging}">
+            <ul class="pagination pull-right no-margin">
+
+                <!-- 首页 -->
+                <li>
+                    <a th:href="${path}+'?pageNum=0'">首页</a>
+                </li>
+
+                <!-- 上一页 -->
+                <li th:if="${kaoheModelPageInfo.hasPrevious()}">
+                    <a th:href="${path}+'?pageNum=' + ${kaoheModelPageInfo.previousPageable().getPageNumber()}" th:text="上一页"></a>
+                </li>
+
+                <!-- 中间页 -->
+                <li th:each="pageNum:${#numbers.sequence(0, kaoheModelPageInfo.getTotalPages() - 1)}">
+                    <a th:href="${path}+'?pageNum=' + ${pageNum}" th:text="${pageNum + 1}" th:if="${pageNum ne kaoheModelPageInfo.pageable.getPageNumber()}"></a>
+                    <a th:href="${path}+'?pageNum=' + ${pageNum}" th:text="${pageNum + 1}" th:if="${pageNum eq kaoheModelPageInfo.pageable.getPageNumber()}" th:style="'font-weight:bold;background: #6faed9;'"></a>
+                </li>
+
+                <!-- 下一页 -->
+                <li th:if="${kaoheModelPageInfo.hasNext()}">
+                    <a th:href="${path}+'?pageNum=' + ${kaoheModelPageInfo.nextPageable().getPageNumber()}" th:text="下一页"></a>
+                </li>
+
+                <!-- 尾页 -->
+                <li>
+                    <a th:href="${path}+'?pageNum=' + ${kaoheModelPageInfo.getTotalPages() - 1}">尾页</a>
+                </li>
+
+            </ul>
+        </div>
     </div>
     <div th:if="${not Choose}">
         <p>请选择课程安排</p>
