--- a/src/main/resources/templates/user/update.html
+++ b/src/main/resources/templates/user/update.html
@@ -84,7 +84,7 @@
             </div>
 
             <div class="layui-btn-container" style="margin-left: 130px">
-                <input type="submit" class="layui-btn" value="添加用户">
+                <input type="submit" class="layui-btn" value="更新用户">
                 <a class="layui-btn layui-btn-primary" th:href="@{|/admin/user/list|}">返回</a>
             </div>
         </form>
