--- a/src/main/resources/templates/kaohe/score2_manage.html
+++ b/src/main/resources/templates/kaohe/score2_manage.html
@@ -203,11 +203,11 @@
                         <td th:if="${stat.index >= 0}"><p th:text="${stuInfo.isDone()}?'完成':'未完成'">12345678</p></td>
                         <td th:if="${stat.index >= 0}">
                             <a th:if="${stuInfo.isDone()}">
-                                <a th:href="|/TreportGrade/${one.getId()}/${stuInfo.getMid()}/giveMark|"
+                                <a th:href="|/TreportGrade/${one.getId()}/${stuInfo.getMid()}/${selected}/giveMark|"
                                    th:if="not ${stuInfo.isReportType()}">
                                     <button class="layui-btn" lay-submit="" lay-filter="demo1">自定义版评分</button>
                                 </a>
-                                <a th:href="|/collegereport/mark/${stuInfo.getMid()}/${one.getId()}|"
+                                <a th:href="|/collegereport/mark/${stuInfo.getMid()}/${one.getId()/${selected}}|"
                                    th:if="${stuInfo.isReportType()}">
                                     <button class="layui-btn" lay-submit="" lay-filter="demo1">学院版评分</button>
                                 </a>
