--- a/src/main/resources/static/new/css/index.css
+++ b/src/main/resources/static/new/css/index.css
@@ -1,316 +1,35 @@
-/* 滚动公告 */
-.notice {
-	color: red;
-	font-size: 14px;
-	display: block;
-	width: 100%;
-	height: 30px;
-	margin: 0 auto;
-	position: relative;
-	overflow: hidden;
-}
-.notice p {
-	position: absolute;
-	top: 0;
-	left: 100%;
-	line-height: 30px;
-	display: block;
-	word-break: keep-all;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-}
-/* 轮播图 */
-.banners {
-	position: relative;
-}
-.rslides {
-	position: relative;
-	list-style: none;
-	overflow: hidden;
-	width: 100%;
-	padding: 0;
-	margin: 0;
-}
-.rslides li {
-	position: absolute;
-	display: none;
-	width: 100%;
-	left: 0;
-	top: 0;
-}
-.rslides li:first-child {
-	position: relative;
-	display: block;
-	float: left;
-}
-.rslides img {
-	display: block;
-	height: auto;
-	float: left;
-	width: 100%;
-	border: 0;
-}
-.rslides_nav {
-	position: absolute;
-	top: 50%;
-	opacity: 0.6;
-	z-index: 3;
-	text-indent: -9999px;
-	overflow: hidden;
-	text-decoration: none;
-	height: 61px;
-	width: 38px;
-	background: transparent url(../images/arrows.gif) no-repeat left top;
-	transform: translateY(-50%);
-}
-.rslides_nav.prev {
-	left: 20px;
-}
-.rslides_nav.next {
-	right: 20px;
-	background-position: right top;
-}
-.rslides_tabs {
-	position: absolute;
-	width: 100%;
-	left: 0;
-	bottom: 10px;
-	z-index: 10;
-	text-align: center;
-}
-.rslides_tabs li {
-	display: inline-block;
-	margin: 0 5px;
-	width: 10px;
-	height: 10px;
-	text-indent: 9999px;
-	border-radius: 10px;
-	border: 1px solid #fff;
-	position: relative;
-	overflow: hidden;
-}
-.rslides_tabs li a {
-	position: absolute;
-	width: 8px;
-	height: 8px;
-	border-radius: 6px;
-	background: transparent;
-	left: 1px;
-	top: 1px;
-}
-.rslides_tabs .rslides_here a {
-	background: #fff;
-}
-/* 新闻部分 */
-.news-section {
-	padding: 30px 0 50px;
-}
-.news-area {
-	width: 400px;
-	float: left;
-}
-.title-bar {
-	height: 51px;
-	line-height: 51px;
-	border-bottom: 1px solid #ccc;
-	color: #215130;
-	box-sizing: border-box;
-	margin: 0 0 10px 0;
-}
-.title-bar .title {
-	font-size: 20px;
-	float: left;
-}
-.title-bar .more {
-	font-size: 12px;
-	float: right;
-}
-.news-item {
-	font-size: 14px;
-	line-height: 42px;
-	border-bottom: 1px dotted #dfdfdf;
-}
-.news-item a {
-	display: block;
-}
-.news-item p {
-	float: left;
-	width: 320px;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-	position: relative;
-	box-sizing: border-box;
-}
-.news-item span {
-	display: block;
-	width: 70px;
-	float: right;
-	font-size: 12px;
-}
-.news-item:hover p {
-	color: #215130;
-	text-decoration: underline;
-}
-.news-item:hover span {
-	color: #215130;
-}
-.recommend {
-	width: 700px;
-	float: right;
-}
-.recommend-item {
-	width: 340px;
-	height: 250px;
-	border: 1px solid #ccc;
-	float: left;
-	box-sizing: border-box;
-	position: relative;
-}
-.recommend-item:first-child {
-	margin: 0 20px 0 0;
-}
-.recommend-item img {
-	width: 100%;
-	height: 100%;
-}
-.recommend-item p {
-	position: absolute;
-	width: 100%;
-	font-size: 14px;
-	bottom: 0;
-	left: 0;
-	z-index: 10;
-	height: 40px;
-	line-height: 40px;
-	background: rgba(0, 0, 0, 0.6);
-	color: #fff;
-	text-align: center;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-	padding: 0 5px;
-	box-sizing: border-box;
-}
-.recommend-item:hover {
-	border-color: #215130;
-}
-.recommend-item:hover p {
-	text-decoration: underline;
-}
-/* 列表部分 */
-.list-section {
-	background: #f7f7f7;
-	padding: 50px;
-}
-.section-title {
-	font-size: 24px;
-	text-align: center;
-	color: #215130;
-	position: relative;
-	padding: 0 0 10px;
-	margin: 0 0 20px 0;
-}
-.section-title:after {
-	content: '';
-	display: block;
-	width: 80px;
-	height: 1px;
-	position: absolute;
-	bottom: 0;
-	background: #ccc;
-	left: 50%;
-	transform: translateX(-50%);
-}
-.list-row {
-	text-align: center;
-	font-size: 14px;
-	box-sizing: border-box;
-	overflow: hidden;
-}
-.list-row > div {
-	float: left;
-	padding: 0 5px;
-	border: 1px solid #666;
-	border-right: none;
-	border-top: none;
-	overflow: hidden;
-	box-sizing: border-box;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-	height: 50px;
-	line-height: 49px;
-	cursor: default;
-}
-.list-row .list-id {
-	width: 100px;
-}
-.list-row .list-name {
-	width: 300px;
-	text-align: left;
-}
-.list-row .list-incharge {
-	width: 100px;
-}
-.list-row .list-desc {
-	width: 500px;
-	text-align: left;
-}
-.list-row .list-time {
-	width: 100px;
-}
-.list-row .list-opt {
-	width: 100px;
-	border-right: 1px solid #666;
-}
-.list-row.list-header-row {
-	border-top: 1px solid #666;
-	background: #215130;
-	color: #fff;
-	font-size: 16px;
-}
-.list-row:hover {
-	background: #dcdcdc;
-}
-.list-row.list-header-row:hover {
-	background: #215130;
-}
-.list-btn {
-	display: inline-block;
-	background: #17452f;
-	line-height: 1;
-	color: #fff;
-	border-radius: 3px;
-	padding: 8px;
-}
-.list-btn:hover {
-	opacity: 0.8;
-}
-.more-btn {
-	width: 120px;
-	height: 42px;
-	line-height: 42px;
-	text-align: center;
-	background: #215130;
-	color: #fff;
-	font-size: 14px;
-	margin: 20px auto 0;
-	cursor: pointer;
-}
-.more-btn:hover {
-	opacity: 0.8;
-}
-/* 图标部分 */
-.charts-section {
-	padding: 50px 0;
-}
-.charts {
-	width: 1200px;
-	margin: 0 auto;
-}
-.chart-item {
-	width: 500px;
-	margin: 0 50px;
-	height: 300px;
-	float: left;
-}
+.notice{color:red;font-size:14px;display:block;width:100%;height:30px;margin:0 auto;position:relative;overflow:hidden;}
+.notice p{position:absolute;top:0;left:100%;line-height:30px;display:block;word-break:keep-all;text-overflow:ellipsis;white-space:nowrap;}
+.bx-wrapper{margin:0;border:none;box-shadow:none;left:0;}
+.bx-wrapper .bx-pager{position:absolute;bottom:10px;}
+.bx-wrapper .bx-pager.bx-default-pager a{position:relative;border:1px solid #fff;box-sizing:border-box;width:12px;height:12px;border-radius:12px;padding:2px;background:transparent;}
+.bx-wrapper .bx-pager.bx-default-pager a:hover,.bx-wrapper .bx-pager.bx-default-pager a.active{background:transparent;}
+.bx-wrapper .bx-pager.bx-default-pager a:hover:after,.bx-wrapper .bx-pager.bx-default-pager a.active:after{content:'';display:block;width:8px;height:8px;border-radius:8px;background:white;position:absolute;top:1px;left:1px;}
+.news-section{padding:30px 0;background:#f7f7f7;}
+.news-area{width:400px;float:left;background:#fff;border-radius:3px;padding:10px 30px;}
+.title-bar{height:51px;line-height:51px;border-bottom:1px solid #ccc;color:#215130;box-sizing:border-box;margin:0 0 10px 0;}
+.title-bar .title{font-size:20px;float:left;}
+.title-bar .more{font-size:12px;float:right;}
+.news-item{font-size:14px;line-height:42px;border-bottom:1px dotted #dfdfdf;}
+.news-item a{display:block;}
+.news-item p{float:left;width:320px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;position:relative;box-sizing:border-box;}
+.news-item span{display:block;width:70px;float:right;font-size:12px;}
+.news-item:hover p{color:#215130;text-decoration:underline;}
+.news-item:hover span{color:#215130;}
+.recommend{width:720px;float:right;background:#fff;padding:10px 30px 12px;border-radius:3px;box-sizing:border-box;}
+.recommend-item{width:100%;height:297px;box-sizing:border-box;position:relative;border:1px solid #ccc;}
+.recommend-item:last-child{margin-right:0;}
+.recommend-item img{width:100%;height:100%;}
+.recommend-item p{position:absolute;width:100%;font-size:14px;bottom:0;left:0;z-index:10;height:40px;line-height:40px;background:rgba(0,0,0,.6);color:#fff;text-align:center;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;padding:0 5px;box-sizing:border-box;}
+.recommend-item:hover p{text-decoration:underline;}
+.lessions-section{padding:50px 0;text-align:center;}
+.lessions-section .bx-wrapper .bx-prev{left:-50px;}
+.lessions-section .bx-wrapper .bx-next{right:-50px;}
+.lessions-title{font-size:26px;text-align:center;line-height:1;color:#215130;margin-bottom:30px;display:inline-block;padding-bottom:8px;border-bottom:1px solid #215130;}
+.lession-item{width:100%;height:380px;border:1px solid #ccc;position:relative;}
+.lession-item img{display:block;width:100%;height:100%;}
+.lession-item p{display:block;position:absolute;width:100%;height:36px;background:rgba(0,0,0,0.7);left:0;bottom:0;line-height:36px;text-align:center;color:#fff;}
+.charts-section{padding:30px 0;background:#f7f7f7;text-align:center;}
+.charts-title{font-size:26px;text-align:center;line-height:1;color:#215130;margin-bottom:30px;display:inline-block;padding-bottom:8px;border-bottom:1px solid #215130;}
+.charts{width:1200px;margin:0 auto;}
+.chart-item{width:500px;margin:0 50px;height:300px;float:left;}
