--- a/src/main/resources/static/new/css/select.css
+++ b/src/main/resources/static/new/css/select.css
@@ -1,8 +1,8 @@
 /*
  * @Author: Charlie
- * @Date: 2020-07-14 15:00:11
- * @Last Modified by:Charlie
- * @Last Modified time: 2020-07-14 15:00:11
+ * @Date: 2020-07-14 10:52:57
+ * @Last Modified by: Charlie
+ * @Last Modified time: 2020-07-14 14:49:52
  */
 a,a:hover{color:inherit;}
 .layui-layout-admin .layui-header{background:#215130;height:80px;}
@@ -19,4 +19,14 @@ a,a:hover{color:inherit;}
 .layui-nav-tree .layui-nav-item a{height:50px;line-height:50px;}
 .layui-nav-tree .layui-nav-item a i{margin-right:10px;font-size:18px;}
 .layui-nav-tree .layui-nav-child a{text-indent:26px;}
-#monitor{position:absolute;left:0;top:0;visibility:hidden;z-index:-10;}
+.select-cover{position:fixed;left:0;top:0;right:0;bottom:0;background:rgba(255,255,255,0.8);z-index:999;}
+.select-title{font-size:28px;text-align:center;line-height:50px;margin-bottom:30px;font-weight:bold;color:#215130;margin:150px 0 50px 0;}
+.select-section{width:1200px;margin:0 auto;}
+.bx-wrapper{margin:0;padding:0;border:0;box-shadow:none;}
+.bx-wrapper .bx-prev{left:-50px;}
+.bx-wrapper .bx-next{right:-50px;}
+.lession-item{position:relative;width:100%;height:385px;border:1px solid #ccc;box-sizing:border-box;}
+.lession-item img{display:block;width:100%;height:100%;}
+.lession-item p{height:36px;line-height:36px;background:rgba(0,0,0,0.7);position:absolute;bottom:0;left:0;width:100%;color:#fff;text-align:center;}
+.select-btn{margin:20px auto 0;width:120px;height:40px;text-align:center;background:#215130;line-height:40px;color:#fff;border-radius:3px;cursor:pointer;}
+.select-btn:hover{opacity:0.7;}
