--- a/src/main/resources/templates/kuangjia/frame.html
+++ b/src/main/resources/templates/kuangjia/frame.html
@@ -1,168 +1,104 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:shiro="http://www.pollix.at/thymeleaf/shiro" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1"/>
-    <meta name="renderer" content="webkit"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>管理中心 - 旅游大数据虚拟仿真实验教学平台</title>
-    <link rel="stylesheet" th:href="@{/new/css/reset.css}" href="../../static/new/css/reset.css"/>
-    <link rel="stylesheet" th:href="@{//cdn.staticfile.org/element-ui/2.13.2/theme-chalk/index.css}"
-          href="//cdn.staticfile.org/element-ui/2.13.2/theme-chalk/index.css"/>
-    <link rel="stylesheet" th:href="@{/new/css/shiyan.css}" href="../../static/new/css/shiyan.css"/>
-    <link rel="stylesheet" th:href="@{/css/layui.css}" href="../../static/css/layui.css"/>
-</head>
-<body>
-<div id="app">
-    <el-container>
-        <el-header height="80px">
-            <div class="logo">
-                <img src="../../static/new/images/sctu_w.png"/>
-                <p>旅游大数据虚拟仿真实验教学平台</p>
-                <span>管理中心</span>
-            </div>
-            <div class="user-menu">
-                <el-dropdown trigger="click" placement="bottom" @command="userMenuHandle">
-                            <span class="el-dropdown-link">
-                                <span>管理员</span>
-                                <em class="el-icon-arrow-down el-icon--right"></em>
-                            </span>
-                            <el-dropdown-menu slot="dropdown">
-                                <el-dropdown-item command="logout">退出登陆</el-dropdown-item>
-                            </el-dropdown-menu>
-                        </el-dropdown>
-                    </div>
-                </el-header>
-                <el-container class="main-container">
-                    <el-aside width="240px">
-                        <el-menu class="e-menu" default-active="/expmodel/alltestModel" unique-opened @select="handleSelect">
-                            <el-submenu index="1">
-                                <template slot="title">
-                                    <i class="el-icon-s-home"></i>
-                                    <span>首页相关设置</span>
-                                </template>
-                                <el-menu-item index="/teachers/list">师资队伍</el-menu-item>
-                                <el-menu-item index="/learning/list">学习效果</el-menu-item>
-                            </el-submenu>
-                            <el-submenu index="2">
-                                <template slot="title">
-                                    <i class="el-icon-menu"></i>
-                                    <span>实验模块设置</span>
-                                </template>
-                                <el-menu-item index="/expmodel/list">实验模块管理</el-menu-item>
-                                <el-menu-item index="/expmodel/moduleList">模块测试/报告管理</el-menu-item>
-                            </el-submenu>
-                            <el-submenu index="3">
-                                <template slot="title">
-                                    <i class="el-icon-document-checked"></i>
-                                    <span>考核设置</span>
-                                </template>
-                                <el-menu-item index="/kaohemodel/checkModule">考核模块设置</el-menu-item>
-                                <el-menu-item index="/shiyan/lastTestList">课程整体测试题管理</el-menu-item>
-                                <el-menu-item index="/testScoreManage/list">模块测试成绩管理</el-menu-item>
-                                <el-menu-item index="/reportScoreManage/list">模块报告成绩管理</el-menu-item>
-                                <el-menu-item index="/expmodel/kaoheProgress">考核模块进度查询</el-menu-item>
-                                <el-menu-item index="/lastTestScoreManage/list">课程整体测试成绩管理</el-menu-item>
-                                <el-menu-item index="/totalscore/list">学生总评成绩管理</el-menu-item>
-                            </el-submenu>
-                            <el-menu-item index="/question/list">
-                                <i class="el-icon-question"></i>
-                                <span slot="title">学生答疑管理</span>
-                            </el-menu-item>
-                            <el-submenu index="5">
-                                <template slot="title">
-                                    <i class="el-icon-house"></i>
-                                    <span>首页设置</span>
-                                </template>
-                                <el-menu-item index="/setinfo/addplat">平台介绍</el-menu-item>
-                                <el-menu-item index="/setinfo/lunbo">轮播导航</el-menu-item>
-                                <el-menu-item index="/newsinfo/list">平台公告</el-menu-item>
-                                <el-menu-item index="/setinfo/addus">关于我们</el-menu-item>
-                            </el-submenu>
-                            <!--<el-menu-item index="/admin/list">-->
-                            <el-menu-item index="/admin/user/list">
-                                <i class="el-icon-s-custom"></i>
-                                <span slot="title">教师账号管理</span>
-                            </el-menu-item>
-                            <el-submenu index="7">
-                                <template slot="title">
-                                    <i class="el-icon-aim"></i>
-                                    <span slot="title">权限管理</span>
-                                </template>
-                                <!--<el-menu-item index="/admin/user/list">用户列表</el-menu-item>-->
-                                <el-menu-item index="/admin/role/list">角色列表</el-menu-item>
-                                <el-menu-item index="/admin/res/list">资源列表</el-menu-item>
-
-                                <!--<el-menu-item index="">角色添加</el-menu-item>-->
-                                <!--<el-menu-item index="">过滤信息添加</el-menu-item>-->
-                                <!--<el-menu-item index="">角色权限分配</el-menu-item>-->
-                            </el-submenu>
-                            <el-submenu index="8">
-                                <template slot="title">
-                                    <i class="el-icon-menu"></i>
-                                    <span>基础设置</span>
-                                </template>
-                                <el-menu-item index="/courseinfo/list">课程设置</el-menu-item>
-                                <el-menu-item index="/arrangeclass/list">课程安排</el-menu-item>
-                            </el-submenu>
-                            <el-submenu index="9">
-                                <template slot="title">
-                                    <i class="el-icon-user-solid"></i>
-                                    <span>学生账号管理</span>
-                                </template>
-                                <el-menu-item index="/studentManage/dockerList">实验地址管理</el-menu-item>
-                                <el-menu-item index="/studentManage/toBeReviewd">学生账号信息审核</el-menu-item>
-                                <el-menu-item index="/studentManage/list">学生账号信息管理</el-menu-item>
-                                <el-menu-item index="/studentManage/classManage">班级管理</el-menu-item>
-                            </el-submenu>
-
-
-                    <el-menu-item index="monitor">
-                        <i class="el-icon-stopwatch"></i>
-                        <span slot="title">平台服务监控</span>
-                    </el-menu-item>
-                </el-menu>
-            </el-aside>
-            <el-main>
-                <iframe src="/setinfo/addplat" id="iframe" frameborder="0" width="100%" height="100%"></iframe>
-                <iframe src="//172.17.55.54:3000/d/9CWBz0bik/ji-qun-jian-kong?orgId=1&kiosk" id="monitor"
-                        frameborder="0" width="100%" height="100%"></iframe>
-            </el-main>
-        </el-container>
-    </el-container>
-</div>
-<script th:src="@{//cdn.staticfile.org/vue/2.6.11/vue.min.js}"
-        src="//cdn.staticfile.org/vue/2.6.11/vue.min.js"></script>
-<script th:src="@{//cdn.staticfile.org/element-ui/2.13.2/index.js}"
-        src="//cdn.staticfile.org/element-ui/2.13.2/index.js"></script>
-<script th:src="@{/js/layui.all.js}" type="text/javascript" charset="utf-8"
-        src="../../static/js/layui.all.js"></script>
-<script th:src="@{/js/layui.js}" type="text/javascript" charset="utf-8"
-        src="../../static/js/layui.js"></script>
-<script>
-    var app = new Vue({
-        el: '#app',
-        data: {},
-        methods: {
-            userMenuHandle(command) {
-                if (command == 'logout') {
-                    window.location.href = '/logout'
-                }
-            },
-            handleSelect(key) {
-                if (key == 'monitor') {
-                    document.getElementById('iframe').style.display = 'none'
-                    document.getElementById('monitor').style.zIndex = 100
-                    document.getElementById('monitor').style.visibility = 'visible'
-                } else {
-                    document.getElementById('monitor').style.zIndex = -10
-                    document.getElementById('monitor').style.visibility = 'hidden'
-                    document.getElementById('iframe').style.display = 'block'
-                    document.getElementById('iframe').src = key
-                }
-            }
-        }
-    })
-</script>
-</body>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1" />
+		<meta name="renderer" content="webkit" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>管理中心 - 旅游大数据虚拟仿真实验教学平台</title>
+		<link rel="stylesheet" href="../../static/new/css/reset.css" />
+		<link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css" />
+		<link rel="stylesheet" href="../../static/new/css/shiyan.css" />
+	</head>
+	<body>
+		<div class="layui-layout layui-layout-admin">
+			<div class="layui-header">
+				<div class="top-logo cl">
+					<img src="../../static/new/images/sctu_w.png" />
+					<p>旅游大数据虚拟仿真实验教学平台</p>
+					<span>管理中心</span>
+				</div>
+				<div class="top-link"><a href="#">退出登录</a></div>
+			</div>
+			<div class="layui-side layui-bg-black">
+				<div class="layui-side-scroll">
+					<ul class="layui-nav layui-nav-tree" lay-shrink="all">
+						<li class="layui-nav-item">
+							<a href="javascript:;"><i class="layui-icon layui-icon-home"></i>首页设置</a>
+							<dl class="layui-nav-child">
+								<dd><a class="to-url" data-url="/setinfo/addplat" href="javascript:;">平台介绍</a></dd>
+								<dd><a class="to-url" data-url="/teachers/list" href="javascript:;">师资队伍</a></dd>
+								<dd><a class="to-url" data-url="/learning/list" href="javascript:;">学习效果</a></dd>
+								<dd><a class="to-url" data-url="/setinfo/lunbo" href="javascript:;">轮播导航</a></dd>
+								<dd><a class="to-url" data-url="/newsinfo/list" href="javascript:;">平台公告</a></dd>
+								<dd><a class="to-url" data-url="/setinfo/addus" href="javascript:;">关于我们</a></dd>
+							</dl>
+						</li>
+						<li class="layui-nav-item">
+							<a href="javascript:;"><i class="layui-icon layui-icon-app"></i>实验模块设置</a>
+							<dl class="layui-nav-child">
+								<dd><a class="to-url" data-url="/expmodel/list" href="javascript:;">实验模块管理</a></dd>
+								<dd><a class="to-url" data-url="/expmodel/moduleList" href="javascript:;">模块测试/报告管理</a></dd>
+							</dl>
+						</li>
+						<li class="layui-nav-item">
+							<a href="javascript:;"><i class="layui-icon layui-icon-survey"></i>考核设置</a>
+							<dl class="layui-nav-child">
+								<dd><a class="to-url" data-url="/kaohemodel/checkModule" href="javascript:;">考核模块设置</a></dd>
+								<dd><a class="to-url" data-url="/shiyan/lastTestList" href="javascript:;">课程理论测试管理</a></dd>
+								<dd><a class="to-url" data-url="/testScoreManage/list" href="javascript:;">模块测试成绩管理</a></dd>
+								<dd><a class="to-url" data-url="/reportScoreManage/list" href="javascript:;">模块报告成绩管理</a></dd>
+								<dd><a class="to-url" data-url="/lastTestScoreManage/list" href="javascript:;">课程理论测试成绩管理</a></dd>
+								<dd><a class="to-url" data-url="/totalscore/list" href="javascript:;">学生总评成绩管理</a></dd>
+							</dl>
+						</li>
+						<li class="layui-nav-item">
+							<a href="javascript:;"><i class="layui-icon layui-icon-user"></i>学生账户管理</a>
+							<dl class="layui-nav-child">
+								<dd><a class="to-url" data-url="/studentManage/toBeReviewd" href="javascript:;">学生账号信息审核</a></dd>
+								<dd><a class="to-url" data-url="/studentManage/list" href="javascript:;">学生账号信息管理</a></dd>
+								<dd><a class="to-url" data-url="/studentManage/classManage" href="javascript:;">班级管理</a></dd>
+								<dd><a class="to-url" data-url="/studentManage/dockerList" href="javascript:;">学生实验管理</a></dd>
+							</dl>
+						</li>
+						<li class="layui-nav-item">
+							<a class="to-url" data-url="/admin/list"><i class="layui-icon layui-icon-username"></i>教师账号管理</a>
+						</li>
+						<li class="layui-nav-item">
+							<a class="to-url" data-url="/question/list"><i class="layui-icon layui-icon-help"></i>学生答疑管理</a>
+						</li>
+						<li class="layui-nav-item">
+							<a class="to-url" data-url="monitor"><i class="layui-icon layui-icon-console"></i>平台服务监控</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="layui-body">
+				<iframe src="about:blank" id="iframe" frameborder="0" width="100%" height="100%"></iframe>
+				<iframe src="//172.17.55.54:3000/d/9CWBz0bik/ji-qun-jian-kong?orgId=1&kiosk" id="monitor" frameborder="0" width="100%" height="100%"></iframe>
+			</div>
+		</div>
+		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
+		<script>
+			$(function () {
+				$('.to-url').click(function (e) {
+					e.preventDefault()
+					if ($(this).data('url')) {
+						if ($(this).data('url') == 'monitor') {
+							$('#iframe').attr('src', 'about:blank')
+							$('#iframe').hide()
+                            $('#monitor').css('z-index', 10);
+                            $('#monitor').css('visibility', 'visible');
+						} else {
+                            $('#monitor').css('z-index', -10);
+                            $('#monitor').css('visibility', 'hidden');
+							$('#iframe').show()
+							$('#iframe').attr('src', $(this).data('url'))
+						}
+					}
+				})
+			})
+		</script>
+	</body>
 </html>
